--- a/styles/basic.css
+++ b/styles/basic.css
@@ -17,6 +17,20 @@
     box-sizing: border-box;
 }
 
+header {
+    background: var(--mint-green);
+    text-align: center;
+    padding: 2rem 0;
+}
+
+header h1 {
+    font-size: 2.5rem;
+}
+
+header p {
+    margin-top: .5rem;
+}
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -47,16 +61,13 @@ a:hover {
     gap: 0.5rem;
     background-color: var(--flavescent);
     color: var(--gray);
-    text-decoration: none;
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
     transition: background-color 0.3s, color 0.3s;
-    font-size: 1rem;
 }
 
 .icon_button:hover {
     background-color: var(--turquoise);
-    color: var(--gray);
 }
 
 footer {
@@ -64,7 +75,6 @@ footer {
     padding: 2rem 0;
     background: var(--white);
     margin-top: 2rem;
-    font-size: 0.9rem;
     color: #666;
 }
 
