--- a/styles/grid.css
+++ b/styles/grid.css
@@ -29,6 +29,7 @@ nav li {
 nav a {
     display: block;
     padding: 1rem;
+    color: var(--gray);
 }
 
 .container {
@@ -57,7 +58,7 @@ nav a {
 
 .card img {
     width: 100%;
-    height: 200px;
+    height: 160px;
     object-fit: cover;
 }
 
